Fixed several layout issues on mobile. Added a few more devblog pages to fill out. Enabling publishing draft posts for now.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,15 +31,11 @@ html {
 * { box-sizing: border-box; }
 
 h1, h2, h3, h4, h5, h6 {
-    /* font-family: RobotoBlack; */
     font-family: RobotoCondensed;
 }
 
 h1, h2, h3 {
-    /* color: #00ff00ff !important; */
-    /* color: #ffff00ff !important; */
     color: #ff00e0ff !important;
-    /* color: #00ffffff !important; */
 }
 
 h4, h5, h6 {
@@ -47,19 +43,12 @@ h4, h5, h6 {
     color: #ff00e0ff !important;
 }
 
-ul {
+#main-content ul {
     list-style: arrow-bullet !important;
 }
 
-#nav-logo {
-    /* padding-top: 10px;; */
-}
-/* .main-menu .logo {
-    height: 200px !important;
-} */
-
-#right-nav-bar {
-  padding-top: 30px;
+.main-menu {
+    padding-top: 10px !important;
 }
 
 .main-menu p {
@@ -72,21 +61,41 @@ ul {
     /* text-decoration-thickness: 0.1rem !important; */
 }
 
+svg {
+    color :  #00ffffff !important;
+}
+
+svg:hover {
+    color: #0088aaff !important;
+}
+
 a {
     color: #00ffffff !important;
 }
 
-
 a:hover {
     color: #0088aaff !important;
-    /* text-decoration: underline !important;
-    text-decoration-thickness: 0.1rem !important; */
 }
 
 p {
     color: #d8d8ddff !important;
 }
 
+.mb-2:focus {
+    color: #f8f8ffff !important;
+}
+
+.mb-2 a:focus {
+    color: #f8f8ffff !important;
+}
+
+.mb-2 a:hover {
+    color: #f8f8ffff !important;
+}
+
+/* .mb-2 a .grow .text-sm:hover {
+    color: #f8f8ffff !important;
+} */
 
 .lead {
     color: #f8f8ffff !important;
@@ -94,13 +103,15 @@ p {
 
 /* ---- grid ---- */
 
-.grid {
+#moodboard-grid {
+    position:relative;
     margin:0px;
-    width:100vh;
+    /* width:100vh; */
+    /* max-width:100vh; */
+
 }
 
-.grid-sizer
-{
+.grid-sizer {
   max-width: 33%;
 }
 
@@ -108,7 +119,9 @@ p {
     opacity: 0;
 }
 
-.grid.visible .grid-item { visibility: visible; }
+.grid.visible .grid-item { 
+    visibility: visible; 
+}
 
 .grid-item {
     max-width: 32%;
@@ -131,10 +144,6 @@ p {
 
 .thumbnail_card {
     border-radius: 17.94px 17.94px 0 0;
-}
-
-.backdrop-blur-2xl
-{
 }
 
 .rounded {
